2009-12-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUmakefile:
	* NSOpenPanel-test/GNUmakefile:
	* NSOpenPanel-test/NSOpenPanel-test.m: Add demo/test for the Open
	panel. The test has been adapted from the Save panel test.

2009-12-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* NSSavePanel-test/NSSavePanel-test.m: Add field to supply a list
	of allowed file type extension to the save panel and a button to
	control whether the panel allows other file type extensions.

2009-12-05  Quentin Mathe  <quentin.mathe@gmail.com>

	* NSOutlineView-test/NSOutlineView-test.m: Added new expandable items
	to better test drop above at multiple levels on the same row.

2009-12-05  Quentin Mathe  <quentin.mathe@gmail.com>

	* NSOutlineView-test/NSOutlineView-test.m: Reindented more sensibly and 
	rearranged a bit the if else statements logic to be simpler.

2007-02-14  Nicola Pero <nicola.pero@meta-innovation.com>

	* Composite-test/GNUmakefile: Updated definition of
	BUNDLE_INSTALL_DIR to use GNUSTEP_LIBRARY instead of
	GNUSTEP_INSTALLATION_DIR.
	* CoordinateCheck-test/GNUmakefile: Same change.
	* EncodingDecoding-test/GNUmakefile: Same change.
	* GSHbox-test/GNUmakefile: Same change.
	* KeyboardInput-test/GNUmakefile: Same change.
	* NSBox-test/GNUmakefile: Same change.
	* NSButton-test/GNUmakefile: Same change.
	* NSColorList-test/GNUmakefile: Same change.
	* NSColorWell-test/GNUmakefile: Same change.
	* NSForm-test/GNUmakefile: Same change.
	* NSOutlineView-test/GNUmakefile: Same change.
	* NSSavePanel-test/GNUmakefile: Same change.
	* NSScrollView-test/GNUmakefile: Same change.
	* NSSecureTextField-test/GNUmakefile: Same change.
	* NSSlider-test/GNUmakefile: Same change.
	* NSSplitView-test/GNUmakefile: Same change.
	* NSTableView-test/GNUmakefile: Same change.
	* NSTextView-test/GNUmakefile: Same change.
	* NSWindowStyleMask-test/GNUmakefile: Same change.
	* StringDrawing-test/GNUmakefile: Same change.

2004-08-14  Adam Fedor  <fedor@gnu.org>
